--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -26,9 +26,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8
+        pip install wemake-python-styleguide
 
-    - name: Lint with flake8
+    - name: Lint with wemake-python-styleguide
       run: |
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=88 --statistics
+        flake8 . --config=setup.cfg  # This will apply the wemake-python-styleguide linting rules
