--- a/setup.cfg
+++ b/setup.cfg
@@ -6,9 +6,9 @@ exclude =
     __pycache__,
     build,
     dist,
-    .venv
+    .venv,
+    alembic  # Игнорируем миграции alembic
 select = B,C,E,F,W,I,D,ANN,NPS,WPS
-
 ignore = 
     D100
     D101
@@ -27,3 +27,11 @@ remove-all-unused-imports = True
 remove-unused-variables = True
 expand-star-imports = True
 ignore-init-module-imports = True
+
+[mypy]
+python_version = 3.7
+exclude = alembic  # Игнорируем миграции alembic
+strict = True
+warn_unused_configs = True
+warn_return_any = True
+strict_optional = True
