--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ exclude =
     build,
     dist,
     .venv,
-    alembic  # Игнорируем миграции alembic
+    alembic
 select = B,C,E,F,W,I,D,ANN,NPS,WPS
 ignore = 
     D100
@@ -15,12 +15,9 @@ ignore =
     D102
 
 [isort]
-profile = black
+profile = wemake
 line_length = 88
 known_third_party = requests,setuptools
-
-[black]
-line-length = 88
 
 [autoflake]
 remove-all-unused-imports = True
@@ -29,8 +26,11 @@ expand-star-imports = True
 ignore-init-module-imports = True
 
 [mypy]
-python_version = 3.7
-exclude = alembic  # Игнорируем миграции alembic
+python_version = 3.8
+exclude = 
+    bigdata_service/src/api/
+    auth_service/src/api
+    alembic
 strict = True
 warn_unused_configs = True
 warn_return_any = True
