--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install autopep8 isort autoflake wemake-python-styleguide flake8 mypy
+        pip install autopep8 isort autoflake flake8 mypy
 
     - name: Run autoflake to remove unused imports/variables
       run: |
@@ -39,7 +39,7 @@ jobs:
       run: |
         autopep8 . --recursive --in-place --pep8-passes 2000 --verbose
 
-    - name: Lint with wemake-python-styleguide
+    - name: Lint with flake8
       run: |
         flake8 . --config=setup.cfg --exit-zero
 
@@ -56,8 +56,9 @@ jobs:
         name: flake8-report
         path: flake8-report/index.html
 
+    # Uncomment to send success message to Telegram
     # - name: Send success message to Telegram
-    #   if: success()  # Выполняем шаг только при успешном завершении всех предыдущих шагов
+    #   if: success()
     #   env:
     #     BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
     #     CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
