--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -45,10 +45,8 @@ jobs:
 
     - name: Type check with mypy
       run: |
-        mypy . --config-file setup.cfg --exit-zero
+        mypy . --config-file setup.cfg
 
-    - uses: stefanzweifel/git-auto-commit-action@v4
-      
     - name: Upload HTML linting report
       if: always()
       uses: actions/upload-artifact@v3
