--- a/setup.cfg
+++ b/setup.cfg
@@ -27,12 +27,13 @@ ignore-init-module-imports = True
 
 [mypy]
 python_version = 3.8
-exclude = 
-    bigdata_service/src/api/
-    auth_service/src/api
-    alembic
-strict = True
 warn_unused_configs = True
 warn_return_any = True
 strict_optional = True
 explicit_package_bases = True
+disallow_untyped_calls = False  
+disallow_untyped_defs = False  
+check_untyped_defs = False 
+warn_unused_ignores = False
+exclude = auth_service|ugc_etl|films_service|admin_service|etl
+ignore_missing_imports = true
