--- a/setup.cfg
+++ b/setup.cfg
@@ -26,14 +26,14 @@ expand-star-imports = True
 ignore-init-module-imports = True
 
 [mypy]
-python_version = 3.8
+python_version = 3.10
 warn_unused_configs = True
 warn_return_any = True
 strict_optional = True
 explicit_package_bases = True
 disallow_untyped_calls = False  
 disallow_untyped_defs = False  
-check_untyped_defs = False 
+check_untyped_defs = True
 warn_unused_ignores = False
 exclude = auth_service|ugc_etl|films_service|admin_service|etl
 ignore_missing_imports = true
