--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,7 @@ services:
     env_file: .env
     volumes:
       - ./auth_service:/app
+      - auth_logs:/app/logs
     expose:
       - 8000
     depends_on:
@@ -267,6 +268,50 @@ services:
     healthcheck:
       test: wget --no-verbose --tries=1 --spider http://localhost:8123/ping || exit 1
 
+  filebeat-auth-api:
+    build:
+      context: ./auth_service/infra/filebeat
+    container_name: filebeat_auth
+    volumes:
+      - auth_logs:/var/app/log
+    depends_on:
+      - auth
+      - kibana
+      - elasticsearch-logs
+
+  logstash:
+    image: logstash:8.10.2
+    depends_on:
+      - elasticsearch-logs
+    environment:
+      XPACK_MONITORING_ENABLED: "false"
+      ES_HOST: "elasticsearch-logs:9200"
+    expose:
+      - 5044/udp
+    volumes:
+      - ./deploy/logstash.conf:/config/logstash.conf:ro
+    command: logstash -f /config/logstash.conf
+
+  # Обратите внимание: не стоит использовать для ELK тот же ES, который задействован для полнотекстового поиска в вашем сервисе
+  elasticsearch-logs:
+    image: elasticsearch:8.10.2
+    environment:
+      - discovery.type=single-node
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms265m -Xmx265m"
+      - xpack.security.enabled=false
+    volumes:
+      - es-logs-data:/tmp/elasticsearch/data
+
+  kibana:
+    image: kibana:8.10.2
+    ports:
+      - "5601:5601"
+    depends_on:
+      - elasticsearch-logs
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch-logs:9200
+
 volumes:
   films_db_data:
   auth_db_data:
@@ -278,3 +323,5 @@ volumes:
   kafka-1_data:
   kafka-2_data:
   clickhouse_data:
+  auth_logs:
+  es-logs-data:
