--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.10', '3.11', '3.12' ]
+        python-version: ['3.10']
 
     steps:
     - uses: actions/checkout@v4
@@ -54,8 +54,17 @@ jobs:
         name: flake8-report
         path: flake8-report/index.html
 
+    - name: Commit and push changes if any files were modified (only on push to main)
+      if: github.ref == 'refs/heads/main' && success()  # Run only on push to main branch and if successful
+      run: |
+        git config --local user.name "GitHub Actions"
+        git config --local user.email "actions@github.com"
+        git add .
+        git diff-index --quiet HEAD || git commit -m "Auto-formatted code with autoflake, isort, autopep8"
+        git push origin main
+
     - name: Send success message to Telegram
-      if: success()  # Выполняем шаг только при успешном завершении всех предыдущих шагов
+      if: success()  # Run this step only if all previous steps were successful
       run: |
         curl -s -X POST https://api.telegram.org/bot${{secrets.TELEGRAM_BOT_TOKEN}}/sendMessage \
           -d chat_id=-4226144479 \
