add env example for auth and fix confix

--- a/.env.example
+++ b/.env.example
@@ -43,6 +43,10 @@ AUTH_CONFIG__OAUTH__YANDEX__CLIENT_SECRET=
 
 AUTH_CONFIG__JAEGER__ENABLE=True
 
+AUTH_CONFIG__LOGGING__LOGGER_FILENAME=/app/logs/auth-api-logs.json
+AUTH_CONFIG__LOGGING__LOGGER_MAXBYTES=15000000
+AUTH_CONFIG__LOGGING__LOGGER_BACKUP_COUNT=5
+
 ### ----------------------- ETL Service ----------------------- ###
 
 POSTGRES_DB_ETL=films_database
