add logs to film service

--- a/.env.example
+++ b/.env.example
@@ -80,6 +80,9 @@ ENABLE_TRACING=True
 
 FILMS_PORT=8000
 
+LOGGER_FILENAME=/app/logs/films-api-logs.json
+LOGGER_MAXBYTES=15000000
+LOGGER_BACKUP_COUNT=5
 ### ----------------------- Tracer ------------------------ ###
 
 COLLECTOR_ZIPKIN_HTTP_PORT=9411
