--- a/deploy/logstash.conf
+++ b/deploy/logstash.conf
@@ -14,5 +14,10 @@ output {
           hosts => [ "elasticsearch-logs" ]
           index => "auth-service-%{+YYYY.MM}"
       }
+  } else if "films-service" in [tags]{
+      elasticsearch {
+          hosts => [ "elasticsearch-logs" ]
+          index => "films-service-%{+YYYY.MM}"
+      }
   }
 }
