add logs to bigdata svc

--- a/deploy/logstash.conf
+++ b/deploy/logstash.conf
@@ -19,5 +19,10 @@ output {
           hosts => [ "elasticsearch-logs" ]
           index => "films-service-%{+YYYY.MM}"
       }
+  } else if "bigdata-service" in [tags]{
+      elasticsearch {
+          hosts => [ "elasticsearch-logs" ]
+          index => "bigdata-service-%{+YYYY.MM}"
+      }
   }
 }
