--- a/.env.example
+++ b/.env.example
@@ -120,6 +120,9 @@ BIGDATA_CONFIG__DB__MAX_OVERFLOW=10
 BIGDATA_CONFIG__KAFKA__HOST=kafka-0
 BIGDATA_CONFIG__KAFKA__PORT=9094
 BIGDATA_CONFIG__KAFKA__TOPIC=movie_progress
+BIGDATA_CONFIG__LOGGING__LOGGER_FILENAME=/app/logs/bigdata-api-logs.json
+BIGDATA_CONFIG__LOGGING__LOGGER_MAXBYTES=15000000
+BIGDATA_CONFIG__LOGGING__LOGGER_BACKUP_COUNT=5
 
 ### ----------------------- UGC ETL -------------------------- ###
 APP_CONFIG__CH__SCHEME=http
