add ignoring bigdata mypy

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,5 +35,5 @@ disallow_untyped_calls = False
 disallow_untyped_defs = False  
 check_untyped_defs = True
 warn_unused_ignores = False
-exclude = auth_service|ugc_etl|films_service|admin_service|etl
+exclude = auth_service|ugc_etl|films_service|admin_service|etl|bigdata_service
 ignore_missing_imports = true
