--- a/.env.example
+++ b/.env.example
@@ -123,6 +123,8 @@ BIGDATA_CONFIG__KAFKA__TOPIC=movie_progress
 BIGDATA_CONFIG__LOGGING__LOGGER_FILENAME=/app/logs/bigdata-api-logs.json
 BIGDATA_CONFIG__LOGGING__LOGGER_MAXBYTES=15000000
 BIGDATA_CONFIG__LOGGING__LOGGER_BACKUP_COUNT=5
+BIGDATA_CONFIG__MONGO__MONGODB_DB_NAME=posts_db
+BIGDATA_CONFIG__MONGO__MONGODB_URI=mongodb://mongos:27017/
 
 ### ----------------------- UGC ETL -------------------------- ###
 APP_CONFIG__CH__SCHEME=http
