--- a/bigdata_service/requirements.txt
+++ b/bigdata_service/requirements.txt
@@ -13,3 +13,6 @@ psycopg2==2.9.2
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
 aiokafka==0.11.0
+fastapi-pagination==0.12.27
+beanie==1.26.0
+python-slugify==8.0.4
