--- a/.env.example
+++ b/.env.example
@@ -113,6 +113,8 @@ BIGDATA_CONFIG__DB__MAX_OVERFLOW=10
 BIGDATA_CONFIG__KAFKA__HOST=kafka-0
 BIGDATA_CONFIG__KAFKA__PORT=9094
 BIGDATA_CONFIG__KAFKA__TOPIC=movie_progress
+BIGDATA_CONFIG__MONGO__MONGODB_DB_NAME=posts_db
+BIGDATA_CONFIG__MONGO__MONGODB_URI=mongodb://mongos:27017/
 
 ### ----------------------- UGC ETL -------------------------- ###
 APP_CONFIG__CH__SCHEME=http
