change mypy config

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,3 +37,4 @@ check_untyped_defs = True
 warn_unused_ignores = False
 exclude = auth_service|ugc_etl|films_service|admin_service|etl
 ignore_missing_imports = true
+disable_error_code = import-untyped
