--- a/auth_service/requirements.txt
+++ b/auth_service/requirements.txt
@@ -18,3 +18,4 @@ opentelemetry-exporter-jaeger==1.21.0
 opentelemetry-instrumentation-fastapi==0.47b0
 authlib==1.3.1
 itsdangerous==2.2.0
+sentry-sdk==2.14.0
