--- a/films_service/requirements.txt
+++ b/films_service/requirements.txt
@@ -9,3 +9,4 @@ opentelemetry-api==1.26.0
 opentelemetry-sdk==1.26.0
 opentelemetry-exporter-jaeger==1.21.0
 opentelemetry-instrumentation-fastapi==0.47b0
+sentry-sdk==2.14.0
