fix(sprint 9): logger for films; provide env vars with prefix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,11 +46,11 @@ services:
     container_name: films_db
     env_file: .env
     environment:
-      - POSTGRESQL_DATABASE=${POSTGRES_DB_FILMS}
-      - POSTGRESQL_USERNAME=${POSTGRES_USER_FILMS}
-      - POSTGRESQL_PASSWORD=${POSTGRES_PASSWORD_FILMS}
-      - POSTGRESQL_MASTER_HOST=${DB_HOST_FILMS}
-      - POSTGRESQL_MASTER_PORT_NUMBER=${DB_PORT_FILMS}
+      - POSTGRESQL_DATABASE=${FILMS_CONFIG__POSTGRES_DB_FILMS}
+      - POSTGRESQL_USERNAME=${FILMS_CONFIG__POSTGRES_USER_FILMS}
+      - POSTGRESQL_PASSWORD=${FILMS_CONFIG__POSTGRES_PASSWORD_FILMS}
+      - POSTGRESQL_MASTER_HOST=${FILMS_CONFIG__DB_HOST_FILMS}
+      - POSTGRESQL_MASTER_PORT_NUMBER=${FILMS_CONFIG__DB_PORT_FILMS}
     volumes:
       - films_db_data:/var/lib/postgresql/data
       - ./db/db_dump_260624.sql:/docker-entrypoint-initdb.d/db_dump_260624.sql
