--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       - elasticsearch
       - redis
       - tracer
+      - films_db
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8000/api/health/ || exit 1"]
       interval: 10s
@@ -276,6 +277,7 @@ services:
       - auth
       - kibana
       - elasticsearch-logs
+      - logstash
 
   filebeat-films-api:
     build:
@@ -287,6 +289,7 @@ services:
       - films
       - kibana
       - elasticsearch-logs
+      - logstash
 
   filebeat-bigdata-api:
     build:
@@ -298,6 +301,7 @@ services:
       - bigdata
       - kibana
       - elasticsearch-logs
+      - logstash
 
   logstash:
     image: logstash:8.10.2
